Titles for more control elements.

--- a/index.html
+++ b/index.html
@@ -490,7 +490,8 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
         	
         	<div id="garden-tools">
         	    <div class="plant-tools">
-        	        <a class="search-link" href="javascript:;" data-role="button" data-icon="plus">Add Plants</a>
+        	        <a class="search-link" href="javascript:;"
+                          data-role="button" data-icon="plus" title="Find and add plants to the garden">Add Plants</a>
                 	<div class="planting-details" style="display:none">
                 	   <h2><a class="plant-detail-link" href="javascript:;">Radish</a></h2>
                 	   <p>Planting: <span class="planting-date"></span></p>
@@ -514,11 +515,11 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
         	
         	<div class="month-selector">
                   <div class="month-selector-inner">
-        	    <a class="last-month" href="javascript:;">&lt;</a>
+        	    <a class="last-month" href="javascript:;" title="View previous month">&lt;</a>
         	    <span class="month"></span>
-        	    <a class="next-month" href="javascript:;">&gt;</a>
+        	    <a class="next-month" href="javascript:;" title="View next month">&gt;</a>
                   </div>
-        	    <a href="javascript:alert('Not implemented');" title-"Print Garden Map"><img src="printer.png" alt="Print"/></a>
+        	    <a href="javascript:alert('Not implemented');" title="Print garden map"><img src="printer.png" alt="Print"/></a>
         	</div>
             <div style="display:none">
                 <ul data-role="listview" class="list-template">
