More search page tweaks.

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
                         	    days
                     	    </div>
                     	    <div data-role="fieldcontain">
-                    	        <legend>Max space</legend>
+                    	        <label for="space-horiz">Max space</label>
                         	    <input id="space-horiz" name="spaceHoriz" type="text" style="width: 2em"/> x 
                         	    <input id="space-vert" name="spaceVert" type="text" style="width: 2em"> ft
                     	    </div>
