Plant info page tweaks.

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
         	        <a class="search-link" href="javascript:;"
                           data-role="button" data-icon="plus" title="Find and add plants to the garden">Add Plants</a>
                 	<div class="planting-details" style="display:none">
-                	   <h2><a class="plant-detail-link" href="javascript:;">Radish</a></h2>
+                	   <h2><a class="plant-detail-link" title="View plant details" href="javascript:;">Radish</a></h2>
                 	   <p>Planting: <span class="planting-date"></span></p>
                 	   <p>Harvest: <span class="harvest-date"></span></p>
                 	   <p>Square ft: <span class="plant-square-feet"></span></p>
@@ -588,7 +588,8 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
             	    <div class="ui-block-a">
             	        <h2>
             	            <span class="plant-detail-name">Tomato: </span>
-            	            <select class="plant-variety-select" data-inline="true">
+            	            <select class="plant-variety-select"
+                              data-inline="true" title="Plant variety">
             	            </select>
             	        </h2>
             	        <img class="plant-detail-image"></p>
