--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
                         </ul>
                     </div>
                     <div class="ui-block-b">
-                        <form>
+                        <form class="reminder-form">
                 	        <div data-role="fieldcontain">
                     	        <label for="task-email">Weekly task email</label>
                                 <select name="task-email" id="task-email" data-role="slider">
