--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@ plant.append($(document.createElement("a")).addClass("planting-copy-link").click
                   <div class="header-right">
         	    <a class="history-link" href="javascript:;" title="View history and record notes"><img src="edit.png" alt="Notes"/></a>
         	    <a class="calendar-link" href="javascript:;" title="View calendar and reminders"><img src="calendar.png" alt="Calendar"/></a>
-        	    <a class="plant-tools-link selected-mode" href="javascript:;">Plant Mode</a>
-        	    <a class="layout-tools-link" href="javascript:;">Layout Mode</a>
+        	    <div class="plant-tools-link selected-mode"><img src="images/plant_icon.png" /></div>
+                    <div class="layout-tools-link"><img src="images/layout_icon.png" /></div>
                   </div>
         	</div>
         	
